--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "0.1.0",
   "description": "An app to help compare word frequencies between two passages",
   "engines": {
-      "node": "6.10.3"
+    "node": "6.10.3"
   },
   "dependencies": {
-    "d3": "^4.12.2",
-    "react": "^16.2.0",
-    "react-bootstrap": "^0.32.0",
+    "d3": "^4.13.0",
+    "react": "16.2.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
+    "react-overlays": "^0.8.3",
     "react-scripts": "1.1.0",
-    "recharts": "^1.0.0-beta.9",
-    "semiotic": "^1.5.0",
+    "react-scrollbar": "^0.5.1",
+    "recharts": "^1.0.0-beta.10",
+    "semiotic": "^1.6.0",
     "stopword": "^0.1.9",
     "tokenize-text": "^1.1.3"
   },
