--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "d3": "^4.13.0",
+    "rc-slider": "^8.6.0",
     "react": "16.2.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
