--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-overlays": "^0.8.3",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
     "react-scrollbar": "^0.5.1",
     "recharts": "^1.0.0-beta.10",
